Added same size option. Removed deprecated constructors.